--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,11 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Secrets and env values
+.secrets
+.env
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
